<resources>
    <string name="app_name">MusiMatch</string>
    <string name="default_sign_in_name_display">לא מחובר</string>

    <string name="sign_in">לא מחובר</string>
    <string name="sign_out">לא מחובר</string>

    <string name="israel_israeli">Israel Israeli</string>
    <string name="log_out">Log out</string>
    <string name="composer">Composer</string>
    <string name="edit">Edit</string>
    <string name="country">Country:</string>
    <string name="israel">Israel</string>
    <string name="city">City:</string>
    <string name="my_creations">My Creations:</string>
    <string name="add_new">Add New</string>
    <string name="haifa">Haifa</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="LoginFragment_subscribeButton">Take Me In!</string>
    <string name="LoginFragment_dontHaveUser">Don\'t you have a user?</string>
    <string name="LoginFragment_joinButton">Join us now!</string>
    <string name="LoginFragment_password">Password</string>
    <string name="LoginFragment_email">Email</string>


    <string name="post">Post</string>
    <string name="the_default_web_client_id" translatable="false">1024298745200-45qq75i1p8dc2ionl3utmf86r2vcv1a1.apps.googleusercontent.com</string>

    <string-array name="postTypeSpinner">
        <item>POEM</item>
        <item>MELODY</item>
    </string-array>

    <string-array name="Tags1">
        <item>Cats</item>
        <item></item>
    </string-array>

    <string-array name="Tags2">
        <item>Love</item>
        <item></item>
    </string-array>

    <string-array name="Tags3">
        <item>None</item>
        <item></item>
    </string-array>
</resources>