<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.UserProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_purple">

        <TextView
            android:id="@+id/FullNameTV"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/israel_israeli"
            android:textColor="@color/bright_light_blue"
            android:textSize="28sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintEnd_toStartOf="@+id/LogOutBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/LogOutBtn"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/log_out"
            android:textColor="@android:color/black"
            app:backgroundTint="@color/banana"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/userProfile_EditBtn"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/edit"
            app:backgroundTint="@color/grayish_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogOutBtn" />

        <TextView
            android:id="@+id/TypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/composer"
            android:textColor="#fff"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FullNameTV" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Username:"
            android:textColor="@color/banana"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TypeTV" />

        <TextView
            android:id="@+id/userProfile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/israel"
            android:textColor="#fff"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/TypeTV" />

        <Button
            android:id="@+id/userProfile_AddNewBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="12dp"
            android:text="@string/add_new"
            app:backgroundTint="@color/grayish_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userProfile_email" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="My Creations:"
            android:textColor="@color/bright_light_blue"
            android:textSize="34sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintEnd_toStartOf="@+id/userProfile_AddNewBtn"
            app:layout_constraintHorizontal_bias="0.214"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userProfile_email" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Email:"
            android:textColor="@color/banana"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/userProfile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="shalom@gmail.com"
            android:textColor="#fff"
            android:textSize="20sp"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/userProfile_username" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userProfile_recycler"
            android:layout_width="397dp"
            android:layout_height="452dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>